<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level_2_bg"
    tools:context="com.example.emily.wordswipe.LevelTwoActivity">

    <TextView
        android:id="@+id/E_in_EVE"
        style="@style/letter"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/V_in_EVE"
        style="@style/letter"
        android:layout_marginRight="2dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/E_in_EVE" />

    <TextView
        android:id="@+id/second_E_in_EVE"
        style="@style/letter"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/V_in_EVE" />

    <TextView
        android:id="@+id/F_in_FEE"
        style="@style/letter"
        android:layout_below="@+id/E_in_EVE"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/letter_background_shape" />

    <TextView
        android:id="@+id/E_in_FEE"
        style="@style/letter"
        android:layout_below="@id/E_in_EVE"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/F_in_FEE"
        android:background="@drawable/letter_background_shape"
        android:gravity="center" />

    <TextView
        android:id="@+id/second_E_in_FEE"
        style="@style/letter"
        android:layout_below="@id/E_in_EVE"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/E_in_FEE"
        android:background="@drawable/letter_background_shape" />

    <TextView
        android:id="@+id/R_in_REF"
        style="@style/letter"
        android:layout_below="@+id/F_in_FEE"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/E_in_REF"
        style="@style/letter"
        android:layout_below="@+id/F_in_FEE"
        android:layout_toRightOf="@+id/R_in_REF" />

    <TextView
        android:id="@+id/F_in_REF"
        style="@style/letter"
        android:layout_below="@+id/F_in_FEE"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/E_in_REF" />

    <TextView
        android:id="@+id/R_in_REV"
        style="@style/letter"
        android:layout_below="@+id/R_in_REF"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="20dp"/>


    <TextView
        android:id="@+id/E_in_REV"
        style="@style/letter"
        android:layout_below="@+id/E_in_REF"
        android:layout_toRightOf="@+id/R_in_REV" />

    <TextView
        android:id="@+id/V_in_REV"
        style="@style/letter"
        android:layout_below="@+id/F_in_REF"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/E_in_REF" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/first_letter_picked"
            style="@style/chosenLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/second_letter_picked"
            style="@style/chosenLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/third_letter_picked"
            style="@style/chosenLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fourth_letter_picked"
            style="@style/chosenLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fifth_letter_picked"
            style="@style/chosenLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/E_in_EVER"
        style="@style/letter"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/second_E_in_EVE" />

    <TextView
        android:id="@+id/V_in_EVER"
        style="@style/letter"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/E_in_EVER" />

    <TextView
        android:id="@+id/second_E_in_EVER"
        style="@style/letter"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/V_in_EVER" />

    <TextView
        android:id="@+id/R_in_EVER"
        style="@style/letter"
        android:layout_marginRight="2dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/second_E_in_EVER" />

    <TextView
        android:id="@+id/F_in_FREE"
        style="@style/letter"
        android:layout_below="@+id/E_in_EVE"
        android:layout_toRightOf="@+id/second_E_in_EVE" />

    <TextView
        android:id="@+id/R_in_FREE"
        style="@style/letter"
        android:layout_below="@+id/E_in_EVE"
        android:layout_toRightOf="@+id/E_in_EVER" />

    <TextView
        android:id="@+id/E_in_FREE"
        style="@style/letter"
        android:layout_below="@+id/E_in_EVE"
        android:layout_toRightOf="@+id/V_in_EVER" />

    <TextView
        android:id="@+id/second_E_in_FREE"
        style="@style/letter"
        android:layout_below="@+id/E_in_EVE"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/second_E_in_EVER"
        android:background="@drawable/letter_background_shape" />

    <TextView
        android:id="@+id/R_in_REEF"
        style="@style/letter"
        android:layout_below="@+id/F_in_FREE"
        android:layout_toRightOf="@+id/second_E_in_EVE" />

    <TextView
        android:id="@+id/E_in_REEF"
        style="@style/letter"
        android:layout_below="@+id/R_in_FREE"
        android:layout_toRightOf="@+id/E_in_EVER" />

    <TextView
        android:id="@+id/second_E_in_REEF"
        style="@style/letter"
        android:layout_below="@+id/E_in_FREE"
        android:layout_toRightOf="@+id/V_in_EVER" />

    <TextView
        android:id="@+id/F_in_REEF"
        style="@style/letter"
        android:layout_below="@+id/second_E_in_FREE"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/second_E_in_EVER"
        android:background="@drawable/letter_background_shape" />

    <TextView
        android:id="@+id/F_in_FEVER"
        style="@style/letter"
        android:layout_below="@+id/R_in_REEF"
        android:layout_toRightOf="@+id/second_E_in_EVE" />

    <TextView
        android:id="@+id/E_in_FEVER"
        style="@style/letter"
        android:layout_below="@+id/E_in_REEF"
        android:layout_toRightOf="@+id/F_in_FEVER" />

    <TextView
        android:id="@+id/V_in_FEVER"
        style="@style/letter"
        android:layout_below="@+id/second_E_in_REEF"
        android:layout_toRightOf="@+id/E_in_FEVER" />

    <TextView
        android:id="@+id/second_E_in_FEVER"
        style="@style/letter"
        android:layout_below="@+id/F_in_REEF"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/V_in_FEVER"
        android:background="@drawable/letter_background_shape" />

    <TextView
        android:id="@+id/R_in_FEVER"
        style="@style/letter"
        android:layout_below="@+id/F_in_REEF"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@+id/second_E_in_FEVER"
        android:background="@drawable/letter_background_shape" />

    <View
        android:id="@+id/letter_choice_circle"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/circle_letter_bg"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/top_letter_choice"
        style="@style/circle_letters"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/letter_E" />

    <TextView
        android:id="@+id/left_top_letter_choice"
        style="@style/circle_letters"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/letter_V"
        android:layout_alignBaseline="@+id/right_top_letter_choice"
        android:layout_alignBottom="@+id/right_top_letter_choice"
        android:layout_alignLeft="@+id/letter_choice_circle"
        android:layout_alignStart="@+id/letter_choice_circle" />

    <TextView
        android:id="@+id/right_top_letter_choice"
        style="@style/circle_letters"
        android:layout_below="@+id/top_letter_choice"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/left_top_letter_choice"
        android:text="@string/letter_E" />

    <TextView
        android:id="@+id/left_bottom_letter_choice"
        style="@style/circle_letters"
        android:layout_below="@+id/left_top_letter_choice"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="40dp"
        android:text="@string/letter_R" />

    <TextView
        android:id="@+id/right_bottom_letter_choice"
        style="@style/circle_letters"
        android:layout_below="@+id/left_top_letter_choice"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/left_bottom_letter_choice"
        android:text="@string/letter_F" />


</RelativeLayout>
